[package]
name = "mailbox_processor"
version = "0.1.4"
edition = "2021"

license = "LGPL-2.1-or-later" 
description = "A small little actor abstraction inspired by the FSharp Mailbox Processor which in turn was inspired by erlang "
homepage = "https://github.com/garydwatson/mailbox_processor"
repository = "https://github.com/garydwatson/mailbox_processor"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.21"

[dev-dependencies]
futures = "0.3.21"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]